--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
   <artifactId>gson</artifactId>
   <version>2.8.6</version>
 </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.22</version>
+    </dependency>
   </dependencies>
 
   <build>
