--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.22</version>
     </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>4.3.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
